# forestplotx

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  RELEASE.md  prerelease_checklist.md  project_scope.md  pyproject.toml  refactoring_plan_v2.md  requirements.txt  test_package.ipynb  visual_test_plan.md
.github/workflows/: ci.yml
data/: data_modeltype_binom.csv  data_modeltype_exp.csv  data_modeltype_gamma.csv  data_modeltype_linear.csv  data_modeltype_ordinal.csv
data/edge_cases/: fixed_effects_raw.csv  quality_partA_fixed_effects_raw.csv
notebooks/: plot_test.ipynb
src/forestplotx/: __init__.py  _axes_config.py  _layout.py  _normalize.py  plot.py  plot_utils.py
src/forestplotx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: run_visual_tests.py  test_axes_config.py  test_layout.py  test_normalization.py  test_plot_smoke.py  visual_test_plan.md
tests/test_results/20260218_175520/logs/: failures.txt  summary.md  visual_results.csv
tests/test_results/20260218_183806/logs/: summary.md  visual_results.csv
tests/test_results/20260218_185348/logs/: summary.md  visual_results.csv
tests/test_results/20260218_185536/logs/: summary.md  visual_results.csv
tests/test_results/20260218_195239/logs/: summary.md  visual_results.csv
tests/test_results/20260219_083233/logs/: summary.md  visual_results.csv
tests/test_results/20260219_093931/logs/: summary.md  visual_results.csv
tests/test_results/20260219_100010/logs/: summary.md  visual_results.csv
tests/test_results/20260219_101635/logs/: summary.md  visual_results.csv
tests/test_results/20260219_104122/logs/: summary.md  visual_results.csv
tests/test_results/20260219_132025/logs/: summary.md  visual_results.csv
tests/test_results/20260219_135356/logs/: summary.md  visual_results.csv
tests/test_results/20260219_135632/logs/: summary.md  visual_results.csv
