[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forestplotx"
version = "1.0.1"
description = "Publication-ready forest plots for regression model outputs in Python."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shervin Taheripour", email = "shervintaheripour@fastmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/shervin-taheripour/forestplotx"
Repository = "https://github.com/shervin-taheripour/forestplotx"
Issues = "https://github.com/shervin-taheripour/forestplotx/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forestplotx = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
